# BAGHEERA-BIO-METAL

./: .gitignore  AGENTS.md  CMakeLists.txt  Cmakelist.txt  LAUNCH_BAGHEERA.bat  README.md  cmake_cxx  console_js  index.html  render_bday.html  ultra_render.html
.github/workflows/: ci.yml
config/: bagheera.cfg
include/: app_core.hpp  config_parser.hpp  platform_bridge.hpp  system_diag.hpp
include/src/: app_core.cpp
include/srrc/: main.cpp
src/: CMakeLists.txt  app_core.cpp  config_parser.cpp  main.cpp  platform_bridge.cpp  system_diag.cpp  system_io.cpp
src/include/: platform_bridge.hpp
src_files/: CMakeLists.txt
